--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   </div>
   <div class="container">
   <div class="jumbotron">
-  <h1 class="display-4">Welcome to my Website</h1>
+  <h1 class="display-4">Welcome to My Website</h1>
   <p class="lead">Chef,Photographer,Engineer,Traveller</p>
   <hr class="my-4">
   <p>Assalamualaikum, I am Chowdhury Azmee. A boy who does not follow the customs of Chittagong. A minor chef in addition to engineering. From a young age, though, as much as I thought about cooking and taking pictures.The dream of becoming a great chef is with till my last breath. And to be a creative photographer. Alhamdulillah, let's try.</p>
